// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-on-node-interface.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on Node @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  ... on User {
    name
    ...ProfilePicture
  }
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on Node @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  ... on User {
    name
    ...ProfilePicture
  }
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

query RefetchableFragmentQuery(
  $size: [Int]
  $id: ID!
) {
  node(id: $id) {
    ...RefetchableFragment
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-on-object-implementing-node-interface.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on User @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  name
  ...ProfilePicture
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on User @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  name
  ...ProfilePicture
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

query RefetchableFragmentQuery(
  $size: [Int]
  $id: ID!
) {
  node(id: $id) {
    ...RefetchableFragment
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-on-query.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on Query @refetchable(queryName: "RefetchableFragmentQuery") @argumentDefinitions(id: {type: "ID!"}) {
  node(id: $id) {
    ... on User {
      id
      name
      ...ProfilePicture
    }
  }
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on Query @argumentDefinitions(
  id: {type: "ID!"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  node(id: $id) {
    ... on User {
      id
      name
      ...ProfilePicture
    }
  }
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

query RefetchableFragmentQuery(
  $id: ID!
  $size: [Int]
) {
  ...RefetchableFragment @arguments(id: $id)
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-on-query-with-cycle.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on Query @refetchable(queryName: "RefetchableFragmentQuery") @argumentDefinitions(id: {type: "ID!"}) {
  node(id: $id) {
    ... on User {
      id
      name
      ...Profile @arguments(includeProfile: true)
    }
  }
}

fragment Profile on User @argumentDefinitions(includeProfile: {type: "Boolean!", defaultValue: false}) {
  id
  name
  profilePicture(size: $pictureSize) {
    uri
  }
  friends(first: $count) {
    edges {
      node {
        ...Profile
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on Query @argumentDefinitions(
  id: {type: "ID!"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  node(id: $id) {
    ... on User {
      id
      name
      ...Profile @arguments(includeProfile: true)
    }
  }
}

fragment Profile on User @argumentDefinitions(
  includeProfile: {type: "Boolean!", defaultValue: false}
) {
  id
  name
  profilePicture(size: $pictureSize) {
    uri
  }
  friends(first: $count) {
    edges {
      node {
        ...Profile
      }
    }
  }
}

query RefetchableFragmentQuery(
  $id: ID!
  $pictureSize: [Int]
  $count: Int
) {
  ...RefetchableFragment @arguments(id: $id)
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-on-viewer.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on Viewer @refetchable(queryName: "RefetchableFragmentQuery") {
  actor {
    id
    name
    ...ProfilePicture
  }
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on Viewer @refetchable(queryName: "RefetchableFragmentQuery") {
  actor {
    id
    name
    ...ProfilePicture
  }
}

fragment ProfilePicture on User {
  profilePicture(size: $size) {
    uri
  }
}

query RefetchableFragmentQuery(
  $size: [Int]
) {
  viewer {
    ...RefetchableFragment
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-with-args-on-object-implementing-node-interface.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on User
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(size: {type: "[Int]"}) {
  id
  name
  ...ProfilePicture @arguments(size: $size)
}

fragment ProfilePicture on User
  @argumentDefinitions(size: {type: "[Int]"}) {
  pic: profilePicture(size: $size) {
    uri
  }
  profilePicture(size: $rootSize) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on User @argumentDefinitions(
  size: {type: "[Int]"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  name
  ...ProfilePicture @arguments(size: $size)
}

fragment ProfilePicture on User @argumentDefinitions(
  size: {type: "[Int]"}
) {
  pic: profilePicture(size: $size) {
    uri
  }
  profilePicture(size: $rootSize) {
    uri
  }
}

query RefetchableFragmentQuery(
  $size: [Int]
  $rootSize: [Int]
  $id: ID!
) {
  node(id: $id) {
    ...RefetchableFragment @arguments(size: $size)
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-with-args-on-query.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on Query
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(id: {type: "ID!"}, size: {type: "[Int]"}) {
  node(id: $id) {
    ... on User {
      id
      name
      ...ProfilePicture @arguments(size: $size)
    }
  }
}

fragment ProfilePicture on User
  @argumentDefinitions(size: {type: "[Int]"}) {
  pic: profilePicture(size: $size) {
    uri
  }
  profilePicture(size: $rootSize) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on Query @argumentDefinitions(
  id: {type: "ID!"}
  size: {type: "[Int]"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  node(id: $id) {
    ... on User {
      id
      name
      ...ProfilePicture @arguments(size: $size)
    }
  }
}

fragment ProfilePicture on User @argumentDefinitions(
  size: {type: "[Int]"}
) {
  pic: profilePicture(size: $size) {
    uri
  }
  profilePicture(size: $rootSize) {
    uri
  }
}

query RefetchableFragmentQuery(
  $id: ID!
  $size: [Int]
  $rootSize: [Int]
) {
  ...RefetchableFragment @arguments(id: $id, size: $size)
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: fragment-with-args-on-viewer.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RefetchableFragment on Viewer
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(size: {type: "[Int]"}) {
  actor {
    id
    name
    ...ProfilePicture @arguments(size: $size)
  }
}

fragment ProfilePicture on User
  @argumentDefinitions(size: {type: "[Int]"}) {
  pic: profilePicture(size: $size) {
    uri
  }
  profilePicture(size: $rootSize) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment RefetchableFragment on Viewer @argumentDefinitions(
  size: {type: "[Int]"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  actor {
    id
    name
    ...ProfilePicture @arguments(size: $size)
  }
}

fragment ProfilePicture on User @argumentDefinitions(
  size: {type: "[Int]"}
) {
  pic: profilePicture(size: $size) {
    uri
  }
  profilePicture(size: $rootSize) {
    uri
  }
}

query RefetchableFragmentQuery(
  $size: [Int]
  $rootSize: [Int]
) {
  viewer {
    ...RefetchableFragment @arguments(size: $size)
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: refetchable-fragment-with-connection.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PaginationFragment on Node
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 10},
    cursor: {type: "ID"},
  ) {
  id
  ... on User {
    name
    friends(after: $cursor, first: $count)
      @connection(key: "PaginationFragment_friends") {
      edges {
        node {
          id
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment PaginationFragment on Node @argumentDefinitions(
  count: {type: "Int", defaultValue: 10}
  cursor: {type: "ID"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  ... on User {
    name
    friends(after: $cursor, first: $count) @__clientField(handle: "connection", key: "PaginationFragment_friends") {
      edges {
        node {
          id
        }
      }
      ... on FriendsConnection {
        edges {
          cursor
          node {
            __typename
          }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
  }
}

query RefetchableFragmentQuery(
  $count: Int = 10
  $cursor: ID
  $id: ID!
) {
  node(id: $id) {
    ...PaginationFragment @arguments(count: $count, cursor: $cursor)
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: refetchable-fragment-with-connection-bidirectional.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PaginationFragment on Node
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 10},
    cursor: {type: "ID"},
  ) {
  id
  ... on User {
    name
    friends(after: $cursor, first: $count, before: $beforeCursor, last: $lastCount)
      @connection(key: "PaginationFragment_friends") {
      edges {
        node {
          id
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment PaginationFragment on Node @argumentDefinitions(
  count: {type: "Int", defaultValue: 10}
  cursor: {type: "ID"}
) @refetchable(queryName: "RefetchableFragmentQuery") {
  id
  ... on User {
    name
    friends(after: $cursor, first: $count, before: $beforeCursor, last: $lastCount) @__clientField(handle: "connection", key: "PaginationFragment_friends") {
      edges {
        node {
          id
        }
      }
      ... on FriendsConnection {
        edges {
          cursor
          node {
            __typename
          }
        }
        pageInfo {
          endCursor
          hasNextPage
          hasPreviousPage
          startCursor
        }
      }
    }
  }
}

query RefetchableFragmentQuery(
  $count: Int = 10
  $cursor: ID
  $beforeCursor: ID
  $lastCount: Int
  $id: ID!
) {
  node(id: $id) {
    ...PaginationFragment @arguments(count: $count, cursor: $cursor)
  }
}

`;

exports[`RelayRefetchableFragmentTransform matches expected output: refetchable-fragment-with-connection-literal-count.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PaginationFragment on Node
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(
    cursor: {type: "ID"},
  ) {
  id
  ... on User {
    name
    friends(after: $cursor, first: 10)
      @connection(key: "PaginationFragment_friends") {
      edges {
        node {
          id
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: RelayRefetchableFragmentTransform: Encountered 1 error(s):
- Invalid use of @refetchable with @connection in fragment 'PaginationFragment', refetchable connections must use variables for the after and first arguments.
  
  Source: GraphQL request (9:5)
   8:     name
   9:     friends(after: $cursor, first: 10)
          ^
  10:       @connection(key: "PaginationFragment_friends") {
  
  Source: GraphQL request (9:36)
   8:     name
   9:     friends(after: $cursor, first: 10)
                                         ^
  10:       @connection(key: "PaginationFragment_friends") {
  
`;

exports[`RelayRefetchableFragmentTransform matches expected output: refetchable-fragment-with-connection-no-cursor.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PaginationFragment on Node
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 10},
  ) {
  id
  ... on User {
    name
    friends(after: "<cursor>", first: $count)
      @connection(key: "PaginationFragment_friends") {
      edges {
        node {
          id
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: RelayRefetchableFragmentTransform: Encountered 1 error(s):
- Invalid use of @refetchable with @connection in fragment 'PaginationFragment', refetchable connections must use variables for the after and first arguments.
  
  Source: GraphQL request (9:5)
   8:     name
   9:     friends(after: "<cursor>", first: $count)
          ^
  10:       @connection(key: "PaginationFragment_friends") {
  
  Source: GraphQL request (9:20)
   8:     name
   9:     friends(after: "<cursor>", first: $count)
                         ^
  10:       @connection(key: "PaginationFragment_friends") {
  
`;

exports[`RelayRefetchableFragmentTransform matches expected output: refetchable-fragment-with-connection-unstable-path.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PaginationFragment on Node
  @refetchable(queryName: "RefetchableFragmentQuery")
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 10},
    cursor: {type: "ID"},
  ) {
  id
  ... on User {
    name
    friends(first: 1) {
      edges {
        node {
          friends(after: $cursor, first: $count)
            @connection(key: "PaginationFragment_friends") {
            edges {
              node {
                id
              }
            }
          }
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: RelayRefetchableFragmentTransform: Encountered 1 error(s):
- Invalid use of @refetchable with @connection in fragment 'PaginationFragment', refetchable connections cannot appear inside plural fields.
  
  Source: GraphQL request (13:11)
  12:         node {
  13:           friends(after: $cursor, first: $count)
                ^
  14:             @connection(key: "PaginationFragment_friends") {
  
  Source: GraphQL request (11:7)
  10:     friends(first: 1) {
  11:       edges {
            ^
  12:         node {
  
`;
